<resources>
    <string name="app_name">HR Opendagen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="beschrijvingopendag">Elke datum bevat de volgende informatie:\nKlassikale overzicht, voorbeelden van projecten, workshops, overige activiteiten</string>
    <string name="opendag1">2 november 2019 | 17:00 - 20:00 uur </string>
    <string name="opendag2">2 februari 2020 | 17:00 - 20:00 uur </string>
    <string name="opendag3">11 april 2020 | 17:00 - 20:00 uur </string>
    <string name="Overzicht_titel">Overzicht</string>
    <string name="Overzicht">Overzicht Open Dagen</string>
    <string name="opleidingen">Opleidingen</string>
    <string name="welkomstbericht">Welkom bij de Open Dagen app!</string>
    <string name="home">Hoofdpagina</string>
    <string name="mail_verzonden">Mail is verzonden</string>
    <string name="inschrijftitel">U heeft zich succesvol ingeschreven. \nWilt u de open dag delen ? \nU kunt gebruik maken van de knoppen hieronden. \nDe terug knop brengt u terug naar de homepagina</string>
    <string name="detail_titel">Details open dag</string>
    <string name="detail_aanmelden">Meld je nu aan voor deze open dag  </string>
    <string name="detail_informatie">Zie meer informatie over deze open dag</string>
    <string name="detail_intro">Een bacheloropleiding is een vierjarige opleiding op hbo-niveau. Na het behalen van je diploma ga je werken of studeer je verder aan een masteropleiding.</string>
    <string name="detail_title">CMI | 2 november 2019 | 16:00 ~ 20:00</string>
    <string name="detail_title2">CMI | 2 februari 2020 | 17:00 ~ 20:00</string>
    <string name="detail_title3">CMI | 11 april 2020 | 17:00 ~ 20:00</string>
    <string name="detail_infotitle">Programma open dag</string>
    <string name="detail_klassikale_voorlichting">Klassikale voorlichting</string>
    <string name="detail_opendag_cmgt">Programma Open Dag Creative Media and Game Technologies</string>
    <string name="detail_opendag_cmd">Programma Open Dag Communcation and Multimedia Design</string>
    <string name="detail_opendag_comm">Programma Open Dag Communicatie</string>
    <string name="detail_opendag_informatica">Programma Open Dag Informatica</string>
    <string name="detail_opendag_technischeinformatica">Programma Open Dag Technische Informatica</string>
    <string name="detail_klassikale_voorlichting_cmgt">Docenten en/of studenten geven een korte voorlichting over de opleiding in een lokaal. De voorlichting duurt ca. 45 minuten.\n16.30 uur\n18.30 uur</string>
    <string name="detail_klassikale_voorlichting_cmd">Docenten en/of studenten geven voorlichting over de opleiding in een lokaal.\n16.30 uur\n17.30 uur\n18.30 uur</string>
    <string name="detail_klassikale_voorlichting_comm">Docenten en/of studenten geven een presentatie over de opleiding in een lokaal. De voorlichting duurt ca.  45 minuten.\n17.00 uur\n18.00 uur</string>
    <string name="detail_klassikale_voorlichting_infomratica">Docenten en/of studenten geven een korte voorlichting over de opleiding in een lokaal. De voorlichting duurt ca. 45 minuten.\n16.45 uur\n17.30 uur\n18.15 uur\n18.45 uur</string>
    <string name="detail_klassikale_voorlichting_technischeinformatica">Docenten en/of studenten geven een korte voorlichting over de opleiding in een lokaal. De voorlichting duurt ca. 45 minuten.\n16.30 uur\n17.15 uur\n18.00 uur\n18.45 uur</string>
    <string name="detail_voorbeelden_projecten">Voorbeelden van projecten</string>
    <string name="detail_voorbeelden_projecten_cmgt">Studenten Creative Media and Game Technologies hebben het studielandschap op de 4e etage van Wijnhaven 99 ingericht met voorbeelden van hun projecten en vertellen je hier graag iets over.\n16.00 - 20.00 uur doorlopend</string>
    <string name="detail_voorbeelden_projecten_comm">Studenten Communicatie hebben het studielandschap op de 2e etage ingericht met voorbeelden van hun projecten en vertellen je hier graag iets over.\n16.00 - 20.00 uur doorlopend</string>
    <string name="detail_voorbeelden_projecten_informatica">Studenten Informatica hebben het studielandschap op de 4e etage ingericht met voorbeelden van hun projecten en vertellen je hier graag iets over.\n16.00 - 20.00 uur doorlopend</string>
    <string name="detail_voorbeelden_projecten_technischeinformatica">Studenten Technische Informatica hebben het studielandschap op de 5e etage van Wijnhaven 99  ingericht met voorbeelden van hun projecten en vertellen je hier graag iets over.\n16.00 uur - 20.00 uur</string>
    <string name="detail_workshops">Workshops</string>
    <string name="detail_workshops_informatica">Je kunt een workshop volgen. Je ervaart dan zelf wat je onder andere leert tijdens de opleiding.\n16.00 - 20.00 uur doorlopend</string>
    <string name="detail_proefles">Proefles</string>
    <string name="detail_proefles_cmd">Je kunt een proefles volgen zodat je echt kunt ervaren hoe het is om Communication and Multimedia Design te studeren.\n17.30 uur\n18.30 uur</string>
    <string name="detail_commdt">Bij Hogeschool Rotterdam is de deeltijdopleiding Communicatie verdeeld in twee overzichtelijke periodes van twee jaar, die je beide afsluit met een volwaardig diploma:\nde deeltijd Associate degree Crossmediale Communicatie (jaar 1 en 2)\nen de deeltijd bachelor Communicatie (jaar 3 en 4) </string>
    <string name="detail_opleidingenmarkt">Opleidingenmarkt</string>
    <string name="detail_opleidingenmarktcomm">Docenten en/of studenten van beide routes staan klaar om in een persoonlijk gesprek je vragen te beantwoorden.\nDoorlopende voorlichting 16.00 - 20.00 uur</string>
    <string name="detail_programma_opendag">Docenten en/of studenten geven een korte voorlichting over de opleiding in een lokaal. De voorlichting duurt ca. 45 minuten.</string>
    <string name="detail_voorlichting_data">Docenten en/of studenten geven een korte voorlichting over de opleiding in een lokaal. De voorlichting duurt ca. 45 minuten.\n\n

16.45 uur\n
17.30 uur\n
18.15 uur\n
18.45 uur\n</string>
    <string name="detail_project_title">Voorbeelden van projecten</string>
    <string name="detail_project_data">Studenten Informatica hebben het studielandschap op de 4e etage ingericht met voorbeelden van hun projecten en vertellen je hier graag iets over.\n\n16.00 - 20.00 uur doorlopend</string>
    <string name="detail_workshop_title">Workshops</string>
    <string name="detail_workshop_data">Je kunt een workshop volgen. Je ervaart dan zelf wat je onder andere leert tijdens de opleiding.\n\n16.00 - 20.00 uur doorlopend</string>
    <string name="detail_overige_title">Overige activiteiten</string>
    <string name="detail_studievoorlichting">Studievoorlichting is hét aanspreekpunt voor informatie over alle opleidingen, toelatingseisen en de aanmeldprocedure. Ook is hier praktische informatie te krijgen over toelatingsexamens, voorbereidingscursussen, buitenlandse diploma’s, proefstuderen en studiekosten. De studievoorlichters kunnen je tevens helpen als je nog twijfels hebt over je studiekeuze, bijvoorbeeld met een workshop of een individueel studiekeuzetraject.</string>
    <string name="meld_je_nu_aan_voor_een_open_dag">Meld je nu aan voor deze open dag!</string>
    <string name="geslacht">Geslacht:</string>
    <string name="email">Email:</string>
    <string name="naam">Voornaam:</string>
    <string name="telefoonnummer">Telefoonnummer:</string>
    <string name="achternaam">Achternaam:</string>
    <string name="datum">Geboortedatum:</string>
    <string name="verstuur">Verstuur</string>
    <string name="vooropleiding">Wat is je vooropleiding?</string>
    <string name="vraag_titel">Stel hier je vraag</string>
    <string name="volledige_naam">Naam</string>
    <string name="vraag">Vraag</string>
    <string name="informatie_titel">Contact</string>
    <string name="informatie_adres">Adres:</string>
    <string name="informatie_adres_gegevens">Wijnhaven 107,\n3011 WN Rotterdam</string>
    <string name="informatie_contact">Contact gegevens:</string>
    <string name="informatie_contact_gegevens">010 794 4000\ncmi-balie@hr.nl</string>
    <string name="informatie_openingstijden">Openingstijden:</string>
    <string name="informatie_openingstijden_gegevens1">Maandag \nDinsdag \nWoensdag \nDonderdag \nVrijdag \nZaterdag \nZondag \n</string>
    <string name="informatie_openingstijden_gegevens2">07:30 - 22:00 uur\n07:30 - 22:00 uur\n07:30 - 22:00 uur\n07:30 - 22:00 uur\n07:30 - 22:00 uur\nGesloten\nGesloten</string>
    <string name="btnbeganegrond">Begane grond</string>
    <string name="btnetage1">Eerste etage</string>
    <string name="btnetage2">Tweede etage</string>
    <string name="btnetage3">Derde etage</string>
    <string name="btnetage4">Vierde etage</string>
    <string name="btnetage5">Vijfde etage</string>
    <string name="Infocmd"> Voor meer informatie kunt u hier naar de website gaan:\nhttps://www.hogeschoolrotterdam.nl/opleidingen/bachelor/communicatie/deeltijd/</string>
    <string name="cmdverhaal">Je wilt vanuit je huidige functie als marketingmedewerker of communicatieadviseur graag doorgroeien naar een managementfunctie, maar daarvoor wordt wel een bachelordiploma gevraagd.</string>
    <string name="cmtverhaal">Heb je een scherp oog en oor voor de verhalen van mensen en merken? Ben je creatief met tekst en beeld en gefascineerd door de wereld van media? Dan is de opleiding Communicatie iets voor jou!</string>
    <string name="infdverhaal">Ben jij toe aan de volgende stap in je loopbaan waarbij je je onder andere bezig houdt met softwaresystemen, informatiesystemen of telematicatoepassingen?</string>
    <string name="inftverhaal">We leiden je op tot software engineer. Je gaat aan de slag met het ontwikkelen van software voor diverse toepassingen. Je bent in staat complexe ICT-systemen te analyseren, ontwerpen en implementeren.</string>
    <string name="cmdt">Als CMD’er ontwerp je interactieve producten en diensten. Dat doe je met een creatief team voor échte opdrachtgevers in Studio’s en Labs.</string>
    <string name="techinft">Als technisch informaticus werk je aan moderne ICT-systemen waarbij hard- en software geïntegreerd zijn. Dankzij je kennis van programmeren en hardware kun je juist op het snijpunt daarvan opereren.</string>
    <string name="cmgtverhaal">Als CMGT\'er ben je een developer (programmeur) van interactieve digitale producten: je ontwikkelt web- en mobiele applicaties en je kent de basis van het ontwikkelen van games. De grenzen tussen deze digitale producten en de fysieke wereld vervagen echter steeds meer en steeds sneller. Je wordt daarom niet opgeleid als specialist in 1 specifieke programmeertaal of platform maar als een flexibele programmeur die zichzelf snel de mogelijkheden van een nieuwe taal of een nieuw platform (smartphone, game console, Internet of Things) eigen kan maken. Met als doel interactieve oplossingen voor klanten te bedenken en ontwikkelen die platform en programmeertaal ontstijgen.</string>
    <string name="webp">Voor meer informatie kunt u hier naar de website gaan:\nhttps://www.hogeschoolrotterdam.nl/hogeschool/locaties/wijnhaven-107/</string>
    <string name="dop">Deeltijd opleidingen</string>
    <string name="vop">Voltijd opleidingen</string>
    <string name="comd">Communicatie deeltijd</string>
    <string name="infd">Informatica deeltijd</string>
    <string name="comv">Communicatie voltijd</string>
    <string name="cmdv">Communication and Multimedia Design voltijd</string>
    <string name="infv">Informatica voltijd</string>
    <string name="tinf">Technische Informatica voltijd</string>
    <string name="cmgt">Creative Media and Game Technologies</string>
    <string name="terug">Terug</string>
</resources>