<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OpendagDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="360dp"
            android:layout_height="60dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_title"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="40dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_klassikale_voorlichting"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_programma_opendag"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="40dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_voorbeelden_projecten"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_voorlichting_data"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="40dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_project_title"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_project_data"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="40dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_workshop_title"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_workshop_data"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="40dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_overige_title"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/detail_workshop_data"
            android:textSize="12sp"/>


    </LinearLayout>


</ScrollView>