<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverzichtFragment">

    <TextView
        android:layout_width="410dp"
        android:layout_height="89dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="0dp"
        android:text="@string/Overzicht"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="410dp"
        android:layout_height="89dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="1dp"
        android:text="@string/beschrijvingopendag"
        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:text="@string/opendag1"
        android:textSize="17sp" />


</RelativeLayout>