<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InschrijvenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/meld_je_nu_aan_voor_een_open_dag"
            android:textColor="@color/white"
            android:background="@color/hrrood"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textPersoonsgegevens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Persoonlijke gegevens"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:background="#e0e0e0"
            android:gravity="center_horizontal"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:id="@+id/textGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geslacht"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>


        <EditText
            android:id="@+id/inputGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints=""
            android:hint="M/V"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naam"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="Klaas"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/textLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/achternaam"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/inputLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="Wieresma"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datum"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/inputDateBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="01/01/1999"
            android:inputType="date"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp" />

        <TextView
            android:id="@+id/textContactgegevens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contactgegevens"
            android:textColor="@color/black"
            android:background="#e0e0e0"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/textMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/inputMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="jaap12@gmail.com"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefoonnummer"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="0612345678"
            android:inputType="phone"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/textEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vooropleiding"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/inputEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Informatica"
            android:inputType="text"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welke opleiding ga je bezoeken?"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/educationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="30dp">

        </Spinner>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="200dp"
            android:text="@string/verstuur"
            android:textColor="@color/white"
            android:background="@drawable/btn_rounded"
            android:layout_marginVertical="15dp"
            android:layout_marginTop="30dp"
            android:onClick="register"/>


    </LinearLayout>
</ScrollView>
